0.1: 2/25/2025
	* Initial somewhat working version.