@@ -183,6 +183,8 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.4.0</version>
 				<configuration>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>shaded</shadedClassifierName>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<transformers>
 						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
