@@ -10,7 +10,7 @@ import com.j256.simpleschemareg.entities.SchemaDetails;
 public interface SchemaPersister {
 
 	/**
-	 * Initialize the schema persister.
+	 * Initialize the schema persister. May be a no-op for some persisters.
 	 */
 	public void initialize() throws IOException;
 
@@ -21,18 +21,10 @@ public interface SchemaPersister {
 
 	/**
 	 * See if the schema already exists in the registry.
+	 * 
+	 * @return Details about the schema or null if not found.
 	 */
 	public SchemaDetails lookupSchema(String schema);
-
-	/**
-	 * Save schema to the registry. If it is new then it will be added to the various internal indexes.
-	 * 
-	 * @param subject
-	 *            Subject name to associate with this schema.
-	 * @param schema
-	 *            Schema that we may be persisting.
-	 */
-	public SchemaDetails saveSchema(String subject, String schema) throws IOException;
 
 	/**
 	 * Lookup to see if schema has been saved in this subject.
@@ -40,24 +32,25 @@ public interface SchemaPersister {
 	 * @param subject
 	 *            Subject name to associate with this schema.
 	 * @param schema
-	 *            Schema that we may be persisting.
+	 *            Schema that we are looking up.
+	 * @return Details about the schema or null if not found.
 	 */
 	public SchemaDetails lookupSchema(String subject, String schema) throws IOException;
 
 	/**
-	 * Lookup and return the schema associated with the schema-id.
+	 * Lookup and return the schema details associated with the schema-id.
 	 */
 	public SchemaDetails lookupSchemaId(long id);
 
 	/**
-	 * Lookup and return the schema associated with a subject and version.
+	 * Lookup and return the schema details associated with a subject and version.
 	 */
 	public SchemaDetails lookupSubjectVersion(String subject, long version) throws IOException;
 
 	/**
 	 * Lookup and return the versions for a subject.
 	 * 
-	 * @return An array of sorted versions or null if subject not found.
+	 * @return An array of sorted versions or null if subject is not found.
 	 */
 	public long[] lookupSubjectVersions(String subject);
 
@@ -68,6 +61,8 @@ public interface SchemaPersister {
 
 	/**
 	 * Delete all versions associated with a subject.
+	 * 
+	 * @return An array of sorted versions that were deleted or null if not found.
 	 */
 	public long[] deleteSubject(String subject);
 
@@ -76,4 +71,15 @@ public interface SchemaPersister {
 	 * with another subject/version.
 	 */
 	public void deleteSubjectVersion(String subject, long version);
+
+	/**
+	 * Save schema to the registry. If it is new then it will be added to the various internal indexes. If it already
+	 * exists then details about it will be returned.
+	 * 
+	 * @param subject
+	 *            Subject name to associate with this schema.
+	 * @param schema
+	 *            Schema that we may be persisting.
+	 */
+	public SchemaDetails saveSchema(String subject, String schema) throws IOException;
 }
